--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-image: url('images/background.jpg');
+  background-image: url('images/background_image.jpg');
   background-size: cover;
   background-position: center;
   z-index: -1;
@@ -29,7 +29,6 @@ header {
 header img {
   width: 150px;
   height: 150px;
-  border-radius: 50%;
   margin-bottom: 20px;
 }
 
